--- a/app/components/lookbook/ui/elements/toolbar/toolbar_button_group/toolbar_button_group.css
+++ b/app/components/lookbook/ui/elements/toolbar/toolbar_button_group/toolbar_button_group.css
@@ -1,4 +1,4 @@
-[data-component="button-group"] {
+[data-component="toolbar-button-group"] {
   display: flex;
   align-items: center;
   width: fit-content;
