--- a/app/components/lookbook/ui/pages/page/page.html.erb
+++ b/app/components/lookbook/ui/pages/page/page.html.erb
@@ -11,7 +11,7 @@
       
       <div class="page-body-wrapper page-slat">
         <section class="page-body page-container">
-          <%= lb_prose { content } %>
+          <%= lb_prose(markdown: markdown?) { content } %>
         </section>
       </div>
     </div>
