--- a/app/views/lookbook/previews/overview.html.erb
+++ b/app/views/lookbook/previews/overview.html.erb
@@ -1,11 +1,35 @@
-<%= preview.notes %>
 
-<h2>Scenarios:</h2>
+<%= markdown(preview.notes) %>
 
-<ul>
-  <% targets.filter(&:visible?).each do |target| %>
-    <li>
-      <%= link_to target.label, target.url_path %>
-    </li>
+<%= lb_table do |table| %>
+  <% table.with_header do |header| %>
+    <% header.with_cell("Name") %>
+    <% header.with_cell("Params?", centered: true) %>
+    <% header.with_cell(centered: true, collapse: true) %>
   <% end %>
-</ul>
+
+  <% targets.filter(&:visible?).each do |target| %>
+    <% table.with_row do |row| %>
+      <% row.with_cell do %>
+        <strong><%= target.label %></strong>
+      <% end %>
+      
+      <% row.with_cell(centered: true) do %>
+        <% if target.params? %>
+          <em>Yes</em>
+        <% else %>
+          <em>No</em>
+        <% end %>
+      <% end %>
+      
+      <% row.with_cell do %>
+        <%=
+          lb_button_group do |group|
+            group.with_button(href: target.preview_path, icon: :external_link, target: "_blank") { "Open" }
+            group.with_button(href: target.url_path, icon: :eye) { "Inspect" }
+          end
+        %>
+      <% end %>
+    <% end %>
+  <% end %>
+<% end %>
