--- a/app/views/lookbook/inspector/panels/_params.html.erb
+++ b/app/views/lookbook/inspector/panels/_params.html.erb
@@ -2,35 +2,47 @@
   .panel {
     padding: var(--lb-panel-padding);
   }
+
+  .placeholder {
+    color: var(--lb-color-content-2);
+    font-style: italic;
+  }
 </style>
 
 <div class="panel">
-  <table>
-    <thead>
-      <tr>
-        <th class="label">Name</th>
-        <th class="name">Param</th>
-        <th class="description">Info</th>
-        <th class="editor">Edit</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% target.params.each do |param| %>
-        <tr @keydown.stop>
-          <td class="label">
-            <%= param.label %>
-          </td>
-          <td class="name">
-            <code><%= param.name %></code>
-          </td>
-          <td class="description">
-            <%= param.description || raw("&mdash;") %>  
-          </td>
-          <td class="editor">
-            <%= render Lookbook::UI::ParamEditor.new(param: param, value: request.query_parameters[param.name]) %>
-          </td>
-        </tr>
+  <% if target.params? %>
+    <%= lb_table do |table| %>
+      <% table.with_header do |header| %>
+        <% header.with_cell("Name", collapse: true) %>
+        <% header.with_cell("Param", collapse: true) %>
+        <% header.with_cell("Description") %>
+        <% header.with_cell("Editor") %>
       <% end %>
-    </tbody>
-  </table>
-</div>
+
+      <% target.params.each do |param| %>
+        <% table.with_row do |row| %>
+          <% row.with_cell(collapse: true) do %>
+            <strong><%= param.label %></strong>
+          <% end %>
+
+          <% row.with_cell(collapse: true) do %>
+            <code><%= param.name %></code>
+          <% end %>
+
+          <% row.with_cell do %>
+            <%= param.description || raw("&mdash;") %>  
+          <% end %>
+
+          <% row.with_cell do %>
+            <%= render Lookbook::UI::ParamEditor.new(param: param, value: request.query_parameters[param.name]) %>
+          <% end %>
+        <% end %>
+      <% end %>
+    <% end %>
+  <% else %>
+    <div class="placeholder">
+      <p>No params configured.</p>
+    </div>
+  <% end %>
+</div>  
+
