--- a/app/components/lookbook/ui/app/header/header.html.erb
+++ b/app/components/lookbook/ui/app/header/header.html.erb
@@ -9,9 +9,25 @@
       </svg>
     </div>
     <div class="header-project-name">
-      <%= config.project_name %>
+      <%= project_name %>
     </div>
   </a>
+  
+  <% if project_links.any? %>
+    <nav class="header-project-links">
+      <% project_links.each do |link| %>
+        <%= link_to link.url, **(link.attrs || {}), class: "header-project-link" do %>
+          <% if link.icon %>
+            <%= lb_icon(link.icon) %>
+          <% end %>
+          <% if link.label %>
+            <span><%= link.label %></span>
+          <% end %>
+        <% end %>
+      <% end %>
+    </nav>
+  <% end %>
+
     
   <% if config.ui_color_scheme_switcher %>
     <div class="header-color-scheme-switcher">
