Add catch-all 404 handler

--- a/app/components/lookbook/ui/app/system_message/system_message.html.erb
+++ b/app/components/lookbook/ui/app/system_message/system_message.html.erb
@@ -14,8 +14,8 @@
     </div>
   <% end %>
   <div class="message-content">
-    <h1 class="message-title"><%= title %></h1>
-    <div class="message-text">
+    <h1 class="message-title" data-role="title"><%= title %></h1>
+    <div class="message-text" data-role="message">
       <%= content %>
     </div>
   </div>
