Use the Lucide sprite instead of injecting separate SVGs onto the page

--- a/app/components/lookbook/icon/component.html.erb
+++ b/app/components/lookbook/icon/component.html.erb
@@ -1,3 +1,5 @@
 <%= render_component_tag :i, style: "height: #{size_rems}; width: #{size_rems}; #{@html_attrs[:style]}", class: "icon-stroke-#{stroke}" do %>
-  <%= svg %>
+  <svg>
+    <use href="/lookbook-assets/img/lucide-sprite.svg#<%= @icon_name %>"></use>
+  </svg>
 <% end %>
